fix: wrong overflow and margin

--- a/frontend/src/common/livedrop/LiveDrop.module.scss
+++ b/frontend/src/common/livedrop/LiveDrop.module.scss
@@ -14,7 +14,7 @@
 
   gap: 22px;
 
-  margin-right: 32px;
+  margin-right: 16px;
 }
 
 .livedrop {
@@ -24,6 +24,4 @@
 
   height: 200px;
   width: 100%;
-
-  // overflow-x: scroll;
 }
